<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="xuanngoc.myapplication.screen.detailgarden.DetailGardenViewModel" />
    </data>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#67e6dc">

        <LinearLayout
            style="@style/commonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".screen.detailgarden.DetailGardenActivity" >

            <TextView
                android:id="@+id/gardenNameView"
                style="@style/commonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="#ff3838"
                android:text="@{viewModel.gardenName}"
                tools:text="Vườn táo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nhiệt độ - độ ẩm trung bình tháng"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/border_square"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nhiệt độ"
                        style="@style/commonText"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.avgTemperature}"
                        tools:text="30℃"
                        style="@style/commonText"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/border_square"
                    android:layout_marginStart="30dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Độ ẩm"
                        style="@style/commonText"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.avgHumility}"
                        tools:text="80%"
                        style="@style/commonText"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/expandListDeviceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                style="@style/commonText"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/device_list"
                android:textColor="#5352ed"
                android:onClick="@{() -> viewModel.clickExpandDeviceList()}"/>

            <TableLayout
                android:id="@+id/listDeviceTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="@{viewModel.visibilityDeviceTable}">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        style="@style/fieldNameTable"
                        android:text="@string/stt"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/fieldNameTable"
                        android:text="@string/device_name"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        style="@style/fieldNameTable"
                        android:text="@string/device_type"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        style="@style/fieldNameTable"
                        android:text="@string/status"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        style="@style/fieldNameTable"
                        android:text="@string/state"
                        android:textColor="#000" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/expandListSensorBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                style="@style/commonText"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sensor_list"
                android:textColor="#5352ed"
                android:onClick="@{() -> viewModel.clickExpandSensorList()}"/>

            <TableLayout
                android:id="@+id/listSensorTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="@{viewModel.visibilitySensorTable}">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        style="@style/fieldNameTable"
                        android:text="@string/stt"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/fieldNameTable"
                        android:text="@string/sensor_name"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        style="@style/fieldNameTable"
                        android:text="@string/sensor_type"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        style="@style/fieldNameTable"
                        android:text="@string/status"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        style="@style/fieldNameTable"
                        android:text="@string/state"
                        android:textColor="#000" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>
</layout>